add first draft functional connectivity

--- a/lecture/Cog_Com_Neuro_ML_DL.bib
+++ b/lecture/Cog_Com_Neuro_ML_DL.bib
@@ -270,7 +270,7 @@ Publisher: Nature Publishing Group},
 	year = {2019},
 	note = {Number: 11
 Publisher: Nature Publishing Group},
-	keywords = {Learning algorithms, Machine learning, Neural circuits},
+	keywords = {Machine learning, Learning algorithms, Neural circuits},
 	pages = {1761--1770},
 	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/6NPJJ8ZM/Richards et al. - 2019 - A deep learning framework for neuroscience.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/ZQC2IWX3/s41593-019-0520-2.html:text/html},
 }
@@ -324,7 +324,7 @@ Publisher: Nature Publishing Group},
 	year = {2021},
 	note = {Number: 1
 Publisher: Nature Publishing Group},
-	keywords = {Learning algorithms, Network models},
+	keywords = {Network models, Learning algorithms},
 	pages = {55--67},
 	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/PLHSVBGM/Saxe et al. - 2021 - If deep learning is the answer, what is the questi.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/GIYPT4AR/s41583-020-00395-8.html:text/html},
 }
@@ -365,7 +365,7 @@ Publisher: Nature Publishing Group},
 	month = feb,
 	year = {2022},
 	note = {Publisher: eLife Sciences Publications, Ltd},
-	keywords = {episodic memory, event cognition, neural network},
+	keywords = {event cognition, episodic memory, neural network},
 	pages = {e74445},
 	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/Q85HY27N/Lu et al. - 2022 - A neural network model of when to retrieve and enc.pdf:application/pdf},
 }
@@ -408,7 +408,7 @@ Publisher: Nature Publishing Group},
 	author = {Perez-Lebel, Alexandre and Varoquaux, Gaël and Le Morvan, Marine and Josse, Julie and Poline, Jean-Baptiste},
 	year = {2022},
 	note = {Publisher: Oxford Univ Press},
-	keywords = {Bagging, Benchmark, Imputation, Machine learning, Missing values, Multiple imputation, Supervised learning},
+	keywords = {Machine learning, Bagging, Supervised learning, Benchmark, Imputation, Missing values, Multiple imputation},
 	file = {HAL PDF Full Text:/Users/peerherholz/Zotero/storage/R64QWPDD/Perez-Lebel et al. - 2022 - Benchmarking missing-values approaches for predict.pdf:application/pdf},
 }
 
@@ -459,7 +459,7 @@ Publisher: Nature Publishing Group},
 	month = apr,
 	year = {2022},
 	note = {arXiv: 2204.07576},
-	keywords = {Computer Science - Information Theory, Computer Science - Machine Learning, Condensed Matter - Soft Condensed Matter},
+	keywords = {Computer Science - Machine Learning, Computer Science - Information Theory, Condensed Matter - Soft Condensed Matter},
 	file = {arXiv Fulltext PDF:/Users/peerherholz/Zotero/storage/KICS8VIV/Murphy and Bassett - 2022 - The Distributed Information Bottleneck reveals the.pdf:application/pdf;arXiv.org Snapshot:/Users/peerherholz/Zotero/storage/CBGAKAZ7/2204.html:text/html},
 }
 
@@ -478,7 +478,7 @@ Publisher: Nature Publishing Group},
 	author = {Buxton, Richard B. and Wong, Eric C. and Frank, Lawrence R.},
 	year = {1998},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/mrm.1910390602},
-	keywords = {cerebral blood flow, cerebral blood volume, cerebral oxygen metabolism, functional magnetic resonance imaging},
+	keywords = {functional magnetic resonance imaging, cerebral blood flow, cerebral blood volume, cerebral oxygen metabolism},
 	pages = {855--864},
 	file = {Snapshot:/Users/peerherholz/Zotero/storage/FG92VZH9/mrm.html:text/html},
 }
@@ -552,4 +552,212 @@ Type: article},
 	url = {https://academic.oup.com/cercor/article/31/12/5686/6350537},
 	urldate = {2022-04-20},
 	file = {Digital Reconstruction of the Neuro-Glia-Vascular Architecture | Cerebral Cortex | Oxford Academic:/Users/peerherholz/Zotero/storage/Z3IFHE33/6350537.html:text/html},
+}
+
+@article{yu_disentangling_2022,
+	title = {Disentangling {Spatial}-{Temporal} {Functional} {Brain} {Networks} via {Twin}-{Transformers}},
+	url = {http://arxiv.org/abs/2204.09225},
+	abstract = {How to identify and characterize functional brain networks (BN) is fundamental to gain system-level insights into the mechanisms of brain organizational architecture. Current functional magnetic resonance (fMRI) analysis highly relies on prior knowledge of specific patterns in either spatial (e.g., resting-state network) or temporal (e.g., task stimulus) domain. In addition, most approaches aim to find group-wise common functional networks, individual-specific functional networks have been rarely studied. In this work, we propose a novel Twin-Transformers framework to simultaneously infer common and individual functional networks in both spatial and temporal space, in a self-supervised manner. The first transformer takes space-divided information as input and generates spatial features, while the second transformer takes time-related information as input and outputs temporal features. The spatial and temporal features are further separated into common and individual ones via interactions (weights sharing) and constraints between the two transformers. We applied our TwinTransformers to Human Connectome Project (HCP) motor task-fMRI dataset and identified multiple common brain networks, including both task-related and resting-state networks (e.g., default mode network). Interestingly, we also successfully recovered a set of individual-specific networks that are not related to task stimulus and only exist at the individual level.},
+	urldate = {2022-04-22},
+	journal = {arXiv:2204.09225 [cs, q-bio]},
+	author = {Yu, Xiaowei and Zhang, Lu and Zhao, Lin and Lyu, Yanjun and Liu, Tianming and Zhu, Dajiang},
+	month = apr,
+	year = {2022},
+	note = {arXiv: 2204.09225
+version: 1},
+	keywords = {Quantitative Biology - Neurons and Cognition, Computer Science - Artificial Intelligence},
+	annote = {Comment: 10 pages},
+	file = {arXiv Fulltext PDF:/Users/peerherholz/Zotero/storage/ESLS5B8K/Yu et al. - 2022 - Disentangling Spatial-Temporal Functional Brain Ne.pdf:application/pdf;arXiv.org Snapshot:/Users/peerherholz/Zotero/storage/Q9ZE4F9R/2204.html:text/html},
+}
+
+@article{fox_spontaneous_2007,
+	title = {Spontaneous fluctuations in brain activity observed with functional magnetic resonance imaging},
+	volume = {8},
+	copyright = {2007 Nature Publishing Group},
+	issn = {1471-0048},
+	url = {https://www.nature.com/articles/nrn2201},
+	doi = {10.1038/nrn2201},
+	abstract = {Spontaneous blood oxygen level dependent (BOLD) fluctuations are not random noise, but are specifically correlated between functionally related brain regions and relate well to known anatomical systems.Spontaneous BOLD fluctuations due to non-neuronal factors such as cardiac or respiratory activity can be isolated and are not responsible for the observed correlation patterns.Spontaneous BOLD fluctuations are correlated with fluctuations in the power of high-frequency neuronal activity.Spontaneous BOLD correlation patterns are largely consistent across different resting states, including sleep and anaesthesia, suggesting that they are an intrinsic property of the brain as opposed to being activity evoked by unconstrained mental activity.Inter-subject variability in these correlation patterns relates to inter-subject variability in activation patterns and task performance.Spontaneous BOLD fluctuations do not disappear during task paradigms but continue throughout, contributing to inter-trial variability in measured BOLD responses and behaviour.},
+	language = {en},
+	number = {9},
+	urldate = {2022-04-25},
+	journal = {Nature Reviews Neuroscience},
+	author = {Fox, Michael D. and Raichle, Marcus E.},
+	month = sep,
+	year = {2007},
+	note = {Number: 9
+Publisher: Nature Publishing Group},
+	keywords = {Neurosciences, Behavioral Sciences, Animal Genetics and Genomics, Biological Techniques, Biomedicine, general, Neurobiology},
+	pages = {700--711},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/U5T3DSB4/Fox and Raichle - 2007 - Spontaneous fluctuations in brain activity observe.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/DCA8U8TF/nrn2201.html:text/html},
+}
+
+@article{biswal_functional_1995,
+	title = {Functional connectivity in the motor cortex of resting human brain using echo-planar mri},
+	volume = {34},
+	issn = {1522-2594},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/mrm.1910340409},
+	doi = {10.1002/mrm.1910340409},
+	abstract = {An MRI time course of 512 echo-planar images (EPI) in resting human brain obtained every 250 ms reveals fluctuations in signal intensity in each pixel that have a physiologic origin. Regions of the sensorimotor cortex that were activated secondary to hand movement were identified using functional MRI methodology (FMRI). Time courses of low frequency ({\textless}0.1 Hz) fluctuations in resting brain were observed to have a high degree of temporal correlation (P {\textless} 10−3) within these regions and also with time courses in several other regions that can be associated with motor function. It is concluded that correlation of low frequency fluctuations, which may arise from fluctuations in blood oxygenation or flow, is a manifestation of functional connectivity of the brain.},
+	language = {en},
+	number = {4},
+	urldate = {2022-04-25},
+	journal = {Magnetic Resonance in Medicine},
+	author = {Biswal, Bharat and Zerrin Yetkin, F. and Haughton, Victor M. and Hyde, James S.},
+	year = {1995},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/mrm.1910340409},
+	keywords = {fMRI, functional connectivity, motor cortex, EPI},
+	pages = {537--541},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/NMYIQFY9/Biswal et al. - 1995 - Functional connectivity in the motor cortex of res.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/DQGLW6V9/mrm.html:text/html},
+}
+
+@article{greicius_functional_2003,
+	title = {Functional connectivity in the resting brain: {A} network analysis of the default mode hypothesis},
+	volume = {100},
+	shorttitle = {Functional connectivity in the resting brain},
+	url = {https://www.pnas.org/doi/abs/10.1073/pnas.0135058100},
+	doi = {10.1073/pnas.0135058100},
+	number = {1},
+	urldate = {2022-04-25},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Greicius, Michael D. and Krasnow, Ben and Reiss, Allan L. and Menon, Vinod},
+	month = jan,
+	year = {2003},
+	note = {Publisher: Proceedings of the National Academy of Sciences},
+	pages = {253--258},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/SVQIETNR/Greicius et al. - 2003 - Functional connectivity in the resting brain A ne.pdf:application/pdf},
+}
+
+@article{shmuel_neuronal_2008,
+	title = {Neuronal correlates of spontaneous fluctuations in {fMRI} signals in monkey visual cortex: {Implications} for functional connectivity at rest},
+	volume = {29},
+	issn = {1097-0193},
+	shorttitle = {Neuronal correlates of spontaneous fluctuations in {fMRI} signals in monkey visual cortex},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/hbm.20580},
+	doi = {10.1002/hbm.20580},
+	abstract = {Recent studies have demonstrated large amplitude spontaneous fluctuations in functional-MRI (fMRI) signals in humans in the resting state. Importantly, these spontaneous fluctuations in blood-oxygenation-level-dependent (BOLD) signal are often synchronized over distant parts of the brain, a phenomenon termed functional-connectivity. Functional-connectivity is widely assumed to reflect interregional coherence of fluctuations in activity of the underlying neuronal networks. Despite the large body of human imaging literature on spontaneous activity and functional-connectivity in the resting state, the link to underlying neural activity remains tenuous. Through simultaneous fMRI and intracortical neurophysiological recording, we demonstrate correlation between slow fluctuations in BOLD signals and concurrent fluctuations in the underlying locally measured neuronal activity. This correlation varied with time-lag of BOLD relative to neuronal activity, resembling a traditional hemodynamic response function with peaks at ∼6 s lag of BOLD signal. The correlations were reliably detected when the neuronal signal consisted of either the spiking rate of a small group of neurons, or relative power changes in the multi-unit activity band, and particularly in the local field potential gamma band. Analysis of correlation between the voxel-by-voxel fMRI time-series and the neuronal activity measured within one cortical site showed patterns of correlation that slowly traversed cortex. BOLD fluctuations in widespread areas in visual cortex of both hemispheres were significantly correlated with neuronal activity from a single recording site in V1. To the extent that our V1 findings can be generalized to other cortical areas, fMRI-based functional-connectivity between remote regions in the resting state can be linked to synchronization of slow fluctuations in the underlying neuronal signals. Hum Brain Mapp 2008. © 2008 Wiley-Liss, Inc.},
+	language = {en},
+	number = {7},
+	urldate = {2022-04-25},
+	journal = {Human Brain Mapping},
+	author = {Shmuel, Amir and Leopold, David A.},
+	year = {2008},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/hbm.20580},
+	keywords = {BOLD, functional connectivity, functional MRI, neurophysiology, visual cortex, resting state, monkey, spontaneous activity},
+	pages = {751--761},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/RH9LH5HF/Shmuel and Leopold - 2008 - Neuronal correlates of spontaneous fluctuations in.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/R7SKSSLX/hbm.html:text/html},
+}
+
+@article{shulman_common_1997,
+	title = {Common {Blood} {Flow} {Changes} across {Visual} {Tasks}: {I}. {Increases} in {Subcortical} {Structures} and {Cerebellum} but {Not} in {Nonvisual} {Cortex}},
+	volume = {9},
+	issn = {0898-929X},
+	shorttitle = {Common {Blood} {Flow} {Changes} across {Visual} {Tasks}},
+	url = {https://doi.org/10.1162/jocn.1997.9.5.624},
+	doi = {10.1162/jocn.1997.9.5.624},
+	abstract = {Nine positron emission tomography (PET) studies of human visual information processing were reanalyzed to determine the consistency across experiments of blood flow increases during active tasks relative to passive viewing of the same stimulus array. No consistent blood flow increases were found in cerebral cortex outside of the visual system, but increases were seen in the thalamus and cerebellum. Although most tasks involve increases in arousal, establishing an intention or behavioral goal, setting up control structures for sequencing task operations, detecting targets, etc., these operations do not produce blood flow increases, detectable with the present methods, in localized cortical regions that are common across tasks. Common subcortical regions, however, may be involved.A left cerebellar and a medial cerebellar focus reflected motor-related processes. Blood flow increases in these regions only occurred in experiments in which the subject made an overt response and were largest when the response was made in the active but not passive condition. These motor-related processes were more complex than simple motor execution, however, since increases were still present when the response was made in both the active and passive conditions. These cerebellar increases may reflect processes related to response selection.Blood flow increases in a right cerebellar region were not motor-related. Increases were not modulated by the presence or absence of motor responses during either the active or passive conditions, and increases were sensitive to within-experiment variables that held the motor response constant. Increases occurred in both language and nonlanguage tasks and appeared to involve a general nonmotor process, but the nature of that process was difficult to specify.A right thalamic focus was sensitive to variables related to focal attention, suggesting that this region was involved in attentional engagement. Right thalamic increases were also correlated over conditions with increases in the left and medial cerebellum, perhaps reflecting additional contributions from motor-related nuclei receiving cerebellar projections.Blood flow increases in a left thalamic focus were completely uncorrelated over conditions with increases in the right thalamus, indicating that it was involved in different functions. Both the left thalamus and right cerebellum yielded larger blood flow increases when subjects performed a complex rather than simple language task, possibly reflecting a language-related pathway. Blood flow increases in the left thalamus were also observed, however, during nonlanguage tasks.},
+	number = {5},
+	urldate = {2022-04-25},
+	journal = {Journal of Cognitive Neuroscience},
+	author = {Shulman, Gordon L. and Corbetta, Maurizio and Buckner, Randy L. and Fiez, Julie A. and Miezin, Francis M. and Raichle, Marcus E. and Petersen, Steven E.},
+	month = oct,
+	year = {1997},
+	pages = {624--647},
+	file = {Snapshot:/Users/peerherholz/Zotero/storage/7UXMIIM9/Common-Blood-Flow-Changes-across-Visual-Tasks-I.html:text/html;Submitted Version:/Users/peerherholz/Zotero/storage/E57ES9LU/Shulman et al. - 1997 - Common Blood Flow Changes across Visual Tasks I. .pdf:application/pdf},
+}
+
+@article{raichle_default_2001,
+	title = {A default mode of brain function},
+	volume = {98},
+	url = {https://www.pnas.org/doi/full/10.1073/pnas.98.2.676},
+	doi = {10.1073/pnas.98.2.676},
+	number = {2},
+	urldate = {2022-04-25},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Raichle, Marcus E. and MacLeod, Ann Mary and Snyder, Abraham Z. and Powers, William J. and Gusnard, Debra A. and Shulman, Gordon L.},
+	month = jan,
+	year = {2001},
+	note = {Publisher: Proceedings of the National Academy of Sciences},
+	pages = {676--682},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/KVSAV5ZW/Raichle et al. - 2001 - A default mode of brain function.pdf:application/pdf},
+}
+
+@article{buckner_brains_2019,
+	title = {The brain’s default network: updated anatomy, physiology and evolving insights},
+	volume = {20},
+	copyright = {2019 Springer Nature Limited},
+	issn = {1471-0048},
+	shorttitle = {The brain’s default network},
+	url = {https://www.nature.com/articles/s41583-019-0212-7},
+	doi = {10.1038/s41583-019-0212-7},
+	abstract = {Discoveries over the past two decades demonstrate that regions distributed throughout the association cortex, often called the default network, are suppressed during tasks that demand external attention and are active during remembering, envisioning the future and making social inferences. This Review describes progress in understanding the organization and function of networks embedded within these association regions. Detailed high-resolution analyses of single individuals suggest that the default network is not a single network, as historically described, but instead comprises multiple interwoven networks. The multiple networks share a common organizational motif (also evident in marmoset and macaque anatomical circuits) that might support a general class of processing function dependent on internally constructed rather than externally constrained representations, with each separate interwoven network specialized for a distinct processing domain. Direct neuronal recordings in humans and monkeys reveal evidence for competitive relationships between the internally and externally oriented networks. Findings from rodent studies suggest that the thalamus might be essential to controlling which networks are engaged through specialized thalamic reticular neurons, including antagonistic subpopulations. These association networks (and presumably thalamocortical circuits) are expanded in humans and might be particularly vulnerable to dysregulation implicated in mental illness.},
+	language = {en},
+	number = {10},
+	urldate = {2022-04-25},
+	journal = {Nature Reviews Neuroscience},
+	author = {Buckner, Randy L. and DiNicola, Lauren M.},
+	month = oct,
+	year = {2019},
+	note = {Number: 10
+Publisher: Nature Publishing Group},
+	keywords = {Cortex, Thalamus, Cognitive neuroscience},
+	pages = {593--608},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/RSENVUHT/Buckner and DiNicola - 2019 - The brain’s default network updated anatomy, phys.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/8NP52Z4N/s41583-019-0212-7.html:text/html},
+}
+
+@article{fox_human_2005,
+	title = {The human brain is intrinsically organized into dynamic, anticorrelated functional networks},
+	volume = {102},
+	url = {https://www.pnas.org/doi/abs/10.1073/pnas.0504136102},
+	doi = {10.1073/pnas.0504136102},
+	number = {27},
+	urldate = {2022-04-25},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Fox, Michael D. and Snyder, Abraham Z. and Vincent, Justin L. and Corbetta, Maurizio and Van Essen, David C. and Raichle, Marcus E.},
+	month = jul,
+	year = {2005},
+	note = {Publisher: Proceedings of the National Academy of Sciences},
+	pages = {9673--9678},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/BUA8ZE9E/Fox et al. - 2005 - The human brain is intrinsically organized into dy.pdf:application/pdf},
+}
+
+@article{thomas_yeo_organization_2011,
+	title = {The organization of the human cerebral cortex estimated by intrinsic functional connectivity},
+	volume = {106},
+	issn = {0022-3077},
+	url = {https://journals.physiology.org/doi/full/10.1152/jn.00338.2011},
+	doi = {10.1152/jn.00338.2011},
+	abstract = {Information processing in the cerebral cortex involves interactions among distributed areas. Anatomical connectivity suggests that certain areas form local hierarchical relations such as within the visual system. Other connectivity patterns, particularly among association areas, suggest the presence of large-scale circuits without clear hierarchical relations. In this study the organization of networks in the human cerebrum was explored using resting-state functional connectivity MRI. Data from 1,000 subjects were registered using surface-based alignment. A clustering approach was employed to identify and replicate networks of functionally coupled regions across the cerebral cortex. The results revealed local networks confined to sensory and motor cortices as well as distributed networks of association regions. Within the sensory and motor cortices, functional connectivity followed topographic representations across adjacent areas. In association cortex, the connectivity patterns often showed abrupt transitions between network boundaries. Focused analyses were performed to better understand properties of network connectivity. A canonical sensory-motor pathway involving primary visual area, putative middle temporal area complex (MT+), lateral intraparietal area, and frontal eye field was analyzed to explore how interactions might arise within and between networks. Results showed that adjacent regions of the MT+ complex demonstrate differential connectivity consistent with a hierarchical pathway that spans networks. The functional connectivity of parietal and prefrontal association cortices was next explored. Distinct connectivity profiles of neighboring regions suggest they participate in distributed networks that, while showing evidence for interactions, are embedded within largely parallel, interdigitated circuits. We conclude by discussing the organization of these large-scale cerebral networks in relation to monkey anatomy and their potential evolutionary expansion in humans to support cognition.},
+	number = {3},
+	urldate = {2022-04-26},
+	journal = {Journal of Neurophysiology},
+	author = {Thomas Yeo, B. T. and Krienen, Fenna M. and Sepulcre, Jorge and Sabuncu, Mert R. and Lashkari, Danial and Hollinshead, Marisa and Roffman, Joshua L. and Smoller, Jordan W. and Zöllei, Lilla and Polimeni, Jonathan R. and Fischl, Bruce and Liu, Hesheng and Buckner, Randy L.},
+	month = sep,
+	year = {2011},
+	note = {Publisher: American Physiological Society},
+	keywords = {association cortex, connectome, default network, functional connectivity, functional magnetic resonance imaging, parietal, prefrontal},
+	pages = {1125--1165},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/34KTJH49/Thomas Yeo et al. - 2011 - The organization of the human cerebral cortex esti.pdf:application/pdf},
+}
+
+@article{urchs_mist_2019,
+	title = {{MIST}: {A} multi-resolution parcellation of functional brain networks},
+	volume = {1},
+	issn = {2515-5059},
+	shorttitle = {{MIST}},
+	url = {https://mniopenresearch.org/articles/1-3/v2},
+	doi = {10.12688/mniopenres.12767.2},
+	abstract = {The functional architecture of the brain is organized across multiple levels of spatial resolutions, from distributed networks to the localized areas they are made of. A brain parcellation that defines functional nodes at multiple resolutions is required to investigate the functional connectome across these scales. Here we present the Multiresolution Intrinsic Segmentation Template (MIST), a multi-resolution group level parcellation of the cortical, subcortical and cerebellar gray matter. The individual MIST parcellations match other published group parcellations in internal homogeneity and reproducibility and perform very well in real-world application benchmarks. In addition, the MIST parcellations are fully annotated and provide a hierarchical decomposition of functional brain networks across nine resolutions (7 to 444 functional parcels). We hope that the MIST parcellation will accelerate research in brain connectivity across resolutions. Because visualizing multiresolution parcellations is challenging, we provide
+              an interactive web interface
+              to explore the MIST. The MIST is also available through the popular
+              nilearn
+              toolbox.},
+	language = {en},
+	urldate = {2022-04-26},
+	journal = {MNI Open Research},
+	author = {Urchs, Sebastian and Armoza, Jonathan and Moreau, Clara and Benhajali, Yassine and St-Aubin, Jolène and Orban, Pierre and Bellec, Pierre},
+	month = mar,
+	year = {2019},
+	pages = {3},
+	file = {Full Text:/Users/peerherholz/Zotero/storage/MNHYL6WS/Urchs et al. - 2019 - MIST A multi-resolution parcellation of functiona.pdf:application/pdf;MIST\: A multi-resolution parcellation of... | MNI Open Research:/Users/peerherholz/Zotero/storage/QZVI6JAE/1-3.html:text/html},
 }
