add draft of dMRI section

--- a/lecture/Cog_Com_Neuro_ML_DL.bib
+++ b/lecture/Cog_Com_Neuro_ML_DL.bib
@@ -761,3 +761,67 @@ Publisher: Nature Publishing Group},
 	pages = {3},
 	file = {Full Text:/Users/peerherholz/Zotero/storage/MNHYL6WS/Urchs et al. - 2019 - MIST A multi-resolution parcellation of functiona.pdf:application/pdf;MIST\: A multi-resolution parcellation of... | MNI Open Research:/Users/peerherholz/Zotero/storage/QZVI6JAE/1-3.html:text/html},
 }
+
+@article{noauthor_osf_nodate,
+	title = {{OSF} {\textbar} {Configure} {Add}-on {Accounts}},
+	url = {https://osf.io/settings/addons/},
+	abstract = {Hosted on the Open Science Framework},
+	language = {en},
+	urldate = {2022-04-26},
+	note = {Publisher: OSF},
+	file = {Snapshot:/Users/peerherholz/Zotero/storage/AX27UGBL/addons.html:text/html},
+}
+
+@article{noauthor_osf_nodate-1,
+	title = {{OSF} {\textbar} {Configure} {Add}-on {Accounts}},
+	url = {https://osf.io/settings/addons/},
+	abstract = {Hosted on the Open Science Framework},
+	language = {en},
+	urldate = {2022-04-26},
+	note = {Publisher: OSF},
+}
+
+@article{bakhit_superior_2020,
+	title = {The superior frontal longitudinal tract: a connection between the dorsal premotor and the dorsolateral prefrontal cortices},
+	volume = {10},
+	copyright = {2020 The Author(s)},
+	issn = {2045-2322},
+	shorttitle = {The superior frontal longitudinal tract},
+	url = {https://www.nature.com/articles/s41598-020-73001-7},
+	doi = {10.1038/s41598-020-73001-7},
+	abstract = {A few studies have identified the structural connection between the premotor area and the lateral prefrontal cortex (DLPFC) as the frontal longitudinal system (FLS). This study investigated the existence of a direct segment (none U-fibre) of the superior part of the FLS (sFLS), which connects the dorsal premotor cortex (PMd) and DLPFC and analysed its asymmetry and termination point patterns. A dataset of diffusion-weighted images from 48 subjects was used for generalised q-sampling imaging tractography. Additionally, a white-fibre dissection was conducted in two right hemispheres. An analysis of spatial location, termination points, laterality, and correlation with the subjects’ gender or handedness was performed. The sFLS was found to have a deeper longitudinal bundle directly connecting the PMd and DLPFC. The bundle is referred to hereafter as the superior frontal longitudinal tract (SFLT). The SFLT was reconstructed in 100\% of right and 88\% of left hemispheres. It exhibited variable patterns in different subjects in their posterior terminations. In addition, it was found to possess a complicated spatial relationship with the adjacent bundles. The SFLT was revealed successfully in two cadaveric right hemispheres, where the posterior terminations were found to originate in the PMd independent of the superior longitudinal fasciculus.},
+	language = {en},
+	number = {1},
+	urldate = {2022-04-27},
+	journal = {Scientific Reports},
+	author = {Bakhit, Mudathir and Fujii, Masazumi and Hiruta, Ryo and Yamada, Masayuki and Iwami, Kenichiro and Sato, Taku and Saito, Kiyoshi},
+	month = sep,
+	year = {2020},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	keywords = {Anatomy, Brain, Nervous system},
+	pages = {15855},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/8CF2R34G/Bakhit et al. - 2020 - The superior frontal longitudinal tract a connect.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/Y32IKRNL/s41598-020-73001-7.html:text/html},
+}
+
+@article{jitsuishi_white_2020,
+	title = {White matter dissection and structural connectivity of the human vertical occipital fasciculus to link vision-associated brain cortex},
+	volume = {10},
+	copyright = {2020 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-020-57837-7},
+	doi = {10.1038/s41598-020-57837-7},
+	abstract = {The vertical occipital fasciculus (VOF) is an association fiber tract coursing vertically at the posterolateral corner of the brain. It is re-evaluated as a major fiber tract to link the dorsal and ventral visual stream. Although previous tractography studies showed the VOF’s cortical projections fall in the dorsal and ventral visual areas, the post-mortem dissection study for the validation remains limited. First, to validate the previous tractography data, we here performed the white matter dissection in post-mortem brains and demonstrated the VOF’s fiber bundles coursing between the V3A/B areas and the posterior fusiform gyrus. Secondly, we analyzed the VOF’s structural connectivity with diffusion tractography to link vision-associated cortical areas of the HCP MMP1.0 atlas, an updated map of the human cerebral cortex. Based on the criteria the VOF courses laterally to the inferior longitudinal fasciculus (ILF) and craniocaudally at the posterolateral corner of the brain, we reconstructed the VOF’s fiber tracts and found the widespread projections to the visual cortex. These findings could suggest a crucial role of VOF in integrating visual information to link the broad visual cortex as well as in connecting the dual visual stream.},
+	language = {en},
+	number = {1},
+	urldate = {2022-04-27},
+	journal = {Scientific Reports},
+	author = {Jitsuishi, Tatsuya and Hirono, Seiichiro and Yamamoto, Tatsuya and Kitajo, Keiko and Iwadate, Yasuo and Yamaguchi, Atsushi},
+	month = jan,
+	year = {2020},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	keywords = {Brain, Extrastriate cortex},
+	pages = {820},
+	file = {Full Text PDF:/Users/peerherholz/Zotero/storage/N48M5AUC/Jitsuishi et al. - 2020 - White matter dissection and structural connectivit.pdf:application/pdf;Snapshot:/Users/peerherholz/Zotero/storage/UIF7ZKDC/s41598-020-57837-7.html:text/html},
+}
